Added to the head, navbar. Added Styles.css and linked

--- a/index.html
+++ b/index.html
@@ -2,4 +2,30 @@
 <head>
 <!--This is my first attempt at web development from scratch.-->
 <title> Guugal dot Com </title>
+<link rel="stylesheet" href="styles.css">
 </head>
+
+<!-- This is some lame beginner commenting to visually isolate the head from the body in my code-->
+
+<body>
+    <header>
+        <navbar>
+            <div>
+                <a href="">About</a>
+            </div>
+            <div>
+                <a href="">Store</a>
+            </div>
+            <div>
+                <a href="">Gmail</a>
+            </div>
+            <div>
+                <a href="">Images</a>
+            </div>
+            <div>
+                <a href="">About</a>
+            </div>
+        </navbar>
+    </header>
+</body>
+
