Fixes the Navbar and added search form and corresponding CSS

--- a/index.html
+++ b/index.html
@@ -10,22 +10,19 @@
 <body>
     <header>
         <navbar>
-            <div>
-                <a href="">About</a>
-            </div>
-            <div>
-                <a href="">Store</a>
-            </div>
-            <div>
-                <a href="">Gmail</a>
-            </div>
-            <div>
-                <a href="">Images</a>
-            </div>
-            <div>
-                <a href="">About</a>
+            <a class="hElem" href="">About</a>
+            <a class="hElem" href="">Store</a>
+            <div class="right-just">
+                <a class="hElem" href="">Gmail</a>
+                <a class="hElem" href="">Images</a>
             </div>
         </navbar>
     </header>
+    <!--The main Chunk-->
+    <div style="margin: 200px 30px;">
+        <img src="googleLogo.png" style="display: block; width: 20%; margin: auto;">
+        <form>
+            <input type="text">
+        </form>
+    </div>
 </body>
-
