Completed search bar

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <div style="margin: 200px 100px;">
         <img src="googleLogo.png" class="logo">
         <div class="searchbar-container">
-            <div class="searchBar">      
-                <form>
+            <div class="search-bar">      
+                <form class=search-form>
                     <input type="image" src="searchIcon.png" class="submit-button" name="submit">    
                     <input type="text" name="searchQuery" class="search">
                 </form>
