--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 
     </header>
     <!--The main Chunk-->
-    <div style="margin: 200px 100px;">
+    <div class="main-container">
         <img src="googleLogo.png" class="logo">
         <div class="searchbar-container">
             <div class="search-bar">      
@@ -34,7 +34,13 @@
                 <a class="voice-search" href="" alt="Search Icon"><img class="voice-search" src="mic.png"></a>
             </div>
         </div>
-        
+        <div class="button-container">
+            <button class="search-button dual-button">Google Search</button>
+            <button class="feeling-lucky dual-button">I'm Feeling Lucky</button>    
+        </div>
+    </div>
+
+    <div class="footer">
 
     </div>
 </body>
