Footer completed, final commit

--- a/index.html
+++ b/index.html
@@ -9,26 +9,26 @@
 
 <body>
     <header>
-            <div style="flex-shrink: 0;">
-                <a class="header-link about" href="">About</a>
-                <a class="header-link" href="">Store</a>
-            </div>
-            <div style="flex-shrink: 0;">
-                <a class="header-link" href="">Gmail</a>
-                <a class="header-link" href="">Images</a>
-                <a href="" class="header-icon-link"><img class="header-icon-grid" src="grid.png"></a>
-                <a href="" class="header-icon-link"><img class="header-icon-profile" src="profPic.png"></a>
-            </div>
-                
-                
+        <div style="flex-shrink: 0;">
+            <a class="header-link about" href="">About</a>
+            <a class="header-link" href="">Store</a>
+        </div>
+        <div style="flex-shrink: 0;">
+            <a class="header-link" href="">Gmail</a>
+            <a class="header-link" href="">Images</a>
+            <a href="" class="header-icon-link"><img class="header-icon-grid" src="grid.png"></a>
+            <a href="" class="header-icon-link"><img class="header-icon-profile" src="profPic.png"></a>
+        </div>
+
+
     </header>
     <!--The main Chunk-->
     <div class="main-container">
         <img src="googleLogo.png" class="logo">
         <div class="searchbar-container">
-            <div class="search-bar">      
+            <div class="search-bar">
                 <form class=search-form>
-                    <input type="image" src="searchIcon.png" class="submit-button" name="submit">    
+                    <input type="image" src="searchIcon.png" class="submit-button" name="submit">
                     <input type="text" name="searchQuery" class="search">
                 </form>
                 <a class="voice-search" href="" alt="Search Icon"><img class="voice-search" src="mic.png"></a>
@@ -36,11 +36,19 @@
         </div>
         <div class="button-container">
             <button class="search-button dual-button">Google Search</button>
-            <button class="feeling-lucky dual-button">I'm Feeling Lucky</button>    
+            <button class="feeling-lucky dual-button">I'm Feeling Lucky</button>
         </div>
     </div>
-
-    <div class="footer">
-
-    </div>
+    <footer>
+        <div class="footer-section">
+            <a class="footer-link" href="">Advertising</a>
+            <a class="footer-link" href="">Business</a>
+            <a class="footer-link" href="">How Search Works</a>
+        </div>
+        <div class="footer-section">
+            <a class="footer-link" href="">Privacy</a>
+            <a class="footer-link" href="">Terms</a>
+            <a class="footer-link" href="">Settings</a>
+        </div class=footer-section>
+    </footer>
 </body>
